css/style.css
html, body {
  max-width: 100%;
  overflow-x: hidden; }

body {
  font-family: "Open Sans", sans-serif;
  color: rgba(0, 0, 0, 0.4);
  -webkit-font-smoothing: antialiased;
  font-size: 12pt; }
  body h1, body h2, body h3, body h4, body h5, body h6, body p {
    font-weight: 400;
    color: rgba(0, 0, 0, 0.4);
    text-decoration: none; }
  body a {
    font-weight: 700;
    color: rgba(0, 0, 0, 0.4);
    text-decoration: none; }
    body a:hover {
      color: #55acee;
      text-decoration: none; }

.structure {
  padding-top: 70px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto; }

.description {
  font-size: 19px !important; }

.profile {
  width: 200px;
  height: 200px;
  display: block;
  margin-bottom: 20px;
  margin-top: 5px;
  background: #F3F3F3;
  background: url("https://pbs.twimg.com/profile_images/576230518934478848/Cfp1V-6p.jpeg") no-repeat;
  background-size: 200px 200px;
  border-radius: 100px; }

h1 {
  font-size: 300%;
  margin-bottom: 10px; }

hr {
  border: none;
  background: #EEEBEB;
  height: 1.5px;
  width: 25%;
  margin-top: 15px;
  margin-bottom: 20px;
  opacity: 0.4; }

footer {
  font-size: 10px; }

.fa {
  margin: 20px; }

.tumblr:hover {
  color: #35465c; }

.twitter:hover {
  color: #55acee; }

.instagram:hover {
  color: #517fa4; }

.medium:hover {
  color: black; }

.flickr:hover {
  color: #0063DC; }

.hidden {
  display: none; }

.contact {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
  padding-bottom: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center; }
  .contact a {
    padding: 5px;
    font-size: 0.75em; }

@media (max-width: 414px) {
  .structure {
    padding-top: 10px; }

  .contact {
    -webkit-flex-flow: column;
        -ms-flex-flow: column;
            flex-flow: column;
    width: 400px; }

  .fa {
    margin: 15px; } }

